Distance calculation now works